# proxmox-basic-soc

./: .gitignore  README.md  crontab.txt  device_classification_log.txt  env_sample  minimal_crontab.txt  pyproject.toml  requirements.txt  run_pipeline.sh  settings.json
asset_sync_library/: asset_matcher.py  ms365_sync.py
assets_sync_library/: asset_categorizer.py  asset_dispatcher.py  asset_finder.py  asset_matcher.py  asset_snapshotter.py  categorization_rules.py  mac_utils.py  microsoft365_data_merger.py  microsoft365_sync.py  ms365_sync.py  static_ip_mappings.py  text_utils.py
config/: categorization_rules.py  intune_settings.py  mac_config.py  microsoft365_config.py  ms365_service.py  network_config.py  nmap_profiles.py  settings.py  snipe_config.py  snipe_db_connection.py  snipe_schema.py  snipe_settings.py  vm_ip_update.py  wazuh_config.py  zabbix_config.py
crud/: assets.py  base.py  categories.py  fields.py  fieldsets.py  manufacturers.py
debug/: asset_debug_logger.py  categorize_from_logs.py  check_checkbox_custom_fields.py  check_snipeit_endpoints.py  check_snipit_entities.py  debug_assets.py  debug_categorization.py  debug_categorization_quick.py  debug_ms365_merge.py  device_debug_logger.py  diagnose_checkbox_custom_fields.py  fix_checkbox_custom_fields.py  intune_categorize_from_logs.py  microsoft365_categorize_from_logs.py  nmap_categorize_from_logs.py  normalize_test.py  snipeit_api_debug.py  teams_categorize_from_logs.py  test_checkbox_custom_field.py  test_create_asset.py  test_create_nmap_asset.py  test_db_connection.py  test_get_asset_details.py  (+8 more)
(+209 files in other folders)
