[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxmox_soc"  # The name of the inner folder containing your code
version = "0.1.0"
description = "A basic Security Operations Center built upon proxmox cluster."
dependencies = [
    # "requests", "python-dotenv", "python-crontab", "msal", "pysnmp", "python-gvm", "pyzabbix", "python-nmap", "pymysql"
]

[tool.setuptools.packages.find]
where = ["."]  # Tells setuptools to look in the current directory for packages
include = ["proxmox_soc*"] 
namespaces = false # specific setting to avoid accidentally grabbing other folders